--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>lucky_royal</title>
+    <title>Past Life</title>
     <meta name="viewport", content="width=device-width, initial-cale=1.0">
     <style type="text/css">
         body
