--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <p text-align=”justify”>&nbsp I think you are so beautiful/handsome in your past birth. Are you ready to see your face go and enter your month of birth in following textbox.</p><br><hr>
 <br>👇 👇<br>
 Here you can see how you were in the past<br>👇 👇👇 👇<br><br>
-        </div><br />kindly enter your month of birth,<br>here<br>Developed by Renag Praveen Kumar<br>
+        </div><br />kindly enter your month of birth,<br>here<br>Developed by Renga Praveen Kumar<br>
     <div class="note">
         <input type="text" required minlength="1" maxlength="2" id="disp" placeholder=":={|)~"  readonly >
         <table>
