--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Here you can see how you were in the past<br>👇 👇👇 👇<br><br>
 
 </center>
 <div class="footer">
-    <center><a href="https://rengapraveenkumar.github.io/portfoliyo.github.io/" style="color:#fff; text-decoration:none;">click here to check my portfoliyo now</a></center>
+    <center style="margin-botton:30px"><a href="https://rengapraveenkumar.github.io/portfoliyo.github.io/" style="color:#fff; text-decoration:none;">click here to check my portfoliyo now</a></center>
     Developed by Renga Praveen Kumar
 </div>
 </body>
